@@ -136,7 +136,7 @@ ai_worker_requirement_percent = 150
 patch_submarine_bug = true
 patch_science_age_bug = true
 patch_pedia_texture_bug = true
-patch_disembark_immobile_bug = true
+patch_blocked_disembark_freeze = true
 patch_houseboat_bug = true
 patch_intercept_lost_turn_bug = true
 patch_phantom_resource_bug = true
