@@ -2,6 +2,7 @@
 - Can increase unit maintenance costs based on their build costs
 - Adjustable AI worker requirement
 - Fix freezes caused by undisembarkable escorting unit
+  - Covered by the disembark immobile bug fix option, which has been renamed
 
 * RELEASE 17 PREVIEW 1
 - Optimize computation of trade networks
